Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.5.0
-
Fix Version/s: 5.5.0 Alpha
-
Component/s: Qt Script
-
Labels:None
-
Environment:Linux, Windows, set TZ=Europe/Helsinki
-
Commits:3dbb5263290b06b74bb5c0a4e15e86b398a759c2 , 3b36a550b04fbdfca835002c9c090be8099afa7f (qtbase/5.5, 11.3.2015, 5.5A)
Description
FAIL! : tst_QScriptEngine::dateRoundtripJSQtJS() Sun Oct 25 2009 03:00:00 GMT+0300 (FLE Daylight Time) tst_qscriptengine.cpp(5811) : failure location PASS : tst_QScriptEngine::dateRoundtripQtJSQt() FAIL! : tst_QScriptEngine::dateConversionJSQt() Sun Oct 25 2009 03:00:00 GMT+0300 (FLE Daylight Time) tst_qscriptengine.cpp(5840) : failure location PASS : tst_QScriptEngine::dateConversionQtJS()
Attachments
Issue Links
- is required for
-
QTBUG-44653 Issues to be fixed before Qt 5.5 Beta
-
- Closed
-
- resulted from
-
QTBUG-43703 Race Condition in QDateTimePrivate::refreshDateTime
-
- Closed
-
For Gerrit Dashboard: QTBUG-44885 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
108109,1 | Blacklist tst_QScriptEngine::dateRoundtripJSQtJS and dateConversionJSQt | 5.5 | qt/qtscript | Status: ABANDONED | +1 | 0 |
108145,5 | Add verbose messages date conversion tests of tst_QScriptEngine. | 5.5 | qt/qtscript | Status: MERGED | -2 | 0 |
108159,7 | Fix regression in time zone handling | 5.5 | qt/qtbase | Status: MERGED | -2 | 0 |
108210,1 | Fix regression in time zone handling 2 | 5.5 | qt/qtbase | Status: ABANDONED | -2 | 0 |