Fix regression in time zone handling

In QtScript we use the msecs since epoch conversion (JS date is based on
the concept). After a8c74ddcf78604c9038ba2a2bea81e445e4b3c58 the date
conversion test in qtscript started to fail. Instead of relying on the
code working by chance, simply update the date when setting it with
setMSecsSinceEpoch.

Task-number: QTBUG-44885
Change-Id: I9f95c9cdccea52e7d1f808f3cb9e18570ef0df13
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>